--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,12 +2,35 @@
   --color-white: #fff;
   --color-black: #000;
   --color-dark-gray: #10100e;
+  --color-yellow: #FFFF00;
+  --color-blue: #6a83fb;
+  --color-violet: #ae72c2;
 
   --spacing-medium: 20px;
+  --spacing-large: 30px;
 
+  --font-bold: 600;
+  --transition: .4s;
   --font-family-main: sans-serif;
 
+  --width-max: 1200px;
+
+  --font-size-header: 26px;
+  --font-size-subheader: 18px;
+  --font-size-main: 16px;
+
   --border-radius-small: 3px;
+
+  --text-swadow-yellow:
+    0 0 2px var(--color-white),
+    0 0 40px var(--color-yellow);
+
+  --text-swadow-blue:
+    0 0 2px var(--color-white),
+    0 0 40px var(--color-blue);
+
+  --theme-default-header: #cccc46;
+  --theme-default-bgimage: url(@static/bg.jpg)
 }
 
 body {
@@ -15,4 +38,22 @@ body {
   padding: 0;
   background-color: var(--color-dark-gray);
   font-family: var(--font-family-main);
+  font-size: var(--font-size-main);
+  background-image: var(--theme-default-bgimage);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: top left;
+  background-attachment: fixed;
+}
+
+img {
+  display: block;
+}
+
+.header__text {
+  line-height: 1.7;
+  font-size: var(--font-size-header);
+  text-shadow: 0 0 2px var(--color-black);
+  color: var(--theme-default-header);
+  transition: color var(--transition);
 }
