create Ui storybook

--- a/src/components/PeoplePage/PeopleNavigation/PeopleNavigation.module.css
+++ b/src/components/PeoplePage/PeopleNavigation/PeopleNavigation.module.css
@@ -1,3 +1,7 @@
-.link {
-    margin: 5px;
+.buttons {
+    margin: var(--spacing-small);
+}
+.container {
+    display: flex;
+    justify-content: center;
 }
