--- a/src/components/PersonPage/PersonFilms/PersonFilms.module.css
+++ b/src/components/PersonPage/PersonFilms/PersonFilms.module.css
@@ -1,3 +1,37 @@
 .wrapper {
-    
+    margin-left: var(--spacing-large);
+    padding: var(--spacing-medium) 0;
+}
+.list__container{
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
+.list__item {
+    display: flex;
+    align-items: center;
+    margin-bottom: var(--margin-list);
+    color: var(--color-white);
+}
+.item__episode {
+    padding: var( --spacing-utrasmall);
+    border-radius: var(--border-radius-small);
+    background-color: var(--color-red);
+
+}
+.item__colon {
+    width: 20px;
+    font-weight: var( --font-bold);
+    text-align: center;
+
+}
+.item__title {
+    color: var(--color-white);
+    text-shadow: var(--text-swadow-yellow);
+}
+@media screen and (max-width: 1020px) {
+    .wrapper {
+       width: 100%;
+       margin: 0; 
+    }
 }
