--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,6 +5,7 @@
   --color-yellow: #FFFF00;
   --color-blue: #6a83fb;
   --color-violet: #ae72c2;
+  --color-red: #f75d83;
 
   --spacing-utrasmall: 5px;
   --spacing-small: 10px;
