--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -45,8 +45,16 @@
     0 6px 30px 5px rgba(0, 0, 0, 0.1), 
     0 8px 10px -5px rgba(0, 0, 0, 0.2);
 
-  --theme-default-header: #cccc46;
-  --theme-default-bgimage: url(@static/bg.jpg)
+  --theme-light-header: #dfe2df;
+  --theme-dark-header: #ca6c6f;
+  --theme-neitral-header: #cccc46;
+  --theme-default-header: var(--theme-neitral-header);
+
+  --theme-light-bgimage: linear-gradient(to right bottom, #051937, #162454, #312d70, #533389, #7a359f);
+  --theme-dark-bgimage: linear-gradient(to right bottom, #000000, #160b11, #20141e, #281b2e, #2b2440);
+  --theme-neitral-bgimage: url(@static/bg.jpg);
+
+  --theme-default-bgimage: var(--theme-neitral-bgimage)
 }
 
 body {
