--- a/src/components/UI/index.css
+++ b/src/components/UI/index.css
@@ -2,8 +2,11 @@
     --color-white: #fff;
     --color-black: #000;
     --color-gray: #9c9c9c;
+    --color-lightgray: #dfe2df;
 
     --font-size-small: 14px;
+    --font-size-medium: 16px;
+
     --font-family-main: sans-serif;
     --font-bold: 600;
 
