Ui input create

--- a/src/components/UI/index.css
+++ b/src/components/UI/index.css
@@ -3,6 +3,7 @@
     --color-black: #000;
     --color-gray: #9c9c9c;
     --color-lightgray: #dfe2df;
+    --color-blue: #6a83fb;
 
     --font-size-small: 14px;
     --font-size-medium: 16px;
@@ -10,7 +11,12 @@
     --font-family-main: sans-serif;
     --font-bold: 600;
 
-    --transition: .4s;
+    --transition: .4s;    
+}
 
-    
+*, *:after, *:before {
+    box-sizing: border-box;
+}
+img {
+    display: block;
 }
