--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -57,6 +57,10 @@
   --theme-default-bgimage: var(--theme-neitral-bgimage)
 }
 
+*, *:after, *:before {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   padding: 0;
