add to categoty

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -31,6 +31,7 @@
     font-weight: var(--font-bold);
     text-shadow: var(--text-swadow-yellow);
     transition: var(--transition);
+    text-transform: capitalize;
 }
 .list__container :global(a.active) {
     border: 2px solid var(--color-violet);
